<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The LineageOS Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Generic texts -->
    <string name="disabled">Disabled</string>

    <!-- XiaomiParts -->
    <string name="xiaomiparts_title">XiaomiParts</string>
    <string name="xiaomiparts_summary">Advanced settings</string>
    <string name="audio_title">Audio</string>
    <string name="display_title">Display</string>
    <string name="performance_title">Performance</string>
    <string name="vibration_title">Vibration</string>

    <!-- Ambient settings -->
    <string name="ambient_enable">Use ambient display</string>

    <!-- Dirac settings -->
    <string name="dirac_title">Mi Sound Enhancer</string>
    <string name="dirac_enable">Enable</string>
    <string name="dirac_summary">Optimize audio quality</string>
    <string name="dirac_headset_title">Choose headphones type</string>
    <string name="dirac_preset_title">Choose a preset</string>

    <!-- Dirac settings: Headset types -->
    <string name="dirac_headset_default">Default</string>
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston-1</string>
    <string name="dirac_headset_general">General</string>
    <string name="dirac_headset_general_inear">Mi Headphones</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston-2</string>
    <string name="dirac_headset_piston_standard">Standard Edition</string>
    <string name="dirac_headset_headphone">Mi Headphones</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling Type-C</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling 3.5mm</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>
    <string name="dirac_headset_ear_four">Mi Quadruple Driver Earphones</string>
    <string name="dirac_headset_piston_typec">Mi In-Ear Headphones (Type-C)</string>
    <string name="dirac_headset_bluetooth_collar">Mi Bluetooth Neckband</string>
    <string name="dirac_headset_bluetooth_linefree">Mi Bluetooth Earphones</string>
    <string name="dirac_headset_redmi_earphones">Redmi Earphones</string>
    <string name="dirac_headset_dual_driver_in_ear">Mi Dual Driver In-ear Earphones</string>

    <!-- Dirac settings: Equalizer presets -->
    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>
    <string name="dirac_preset_bass_booster">Bass Booster</string>
    <string name="dirac_preset_live">Live</string>
    <string name="dirac_preset_balanced">Balanced</string>
    <string name="dirac_preset_bass_reduction">Bass Reduction</string>
    <string name="dirac_preset_treble_reduction">Treble Reduction</string>
    <string name="dirac_preset_soft_bass">Soft Bass</string>
    <string name="dirac_preset_soft_treble">Soft Treble</string>

    <!-- Dirac settings: Sound Scenes -->
    <string name="music_headset_scenario_select">Choose scene</string>
    <string name="music_headset_scenario_intelligent">Smart</string>
    <string name="music_headset_scenario_music">Music</string>
    <string name="music_headset_scenario_video">Video</string>
    <string name="music_headset_scenario_vocal">Voice</string>

    <!-- Thermal Profiles -->
    <string name="thermal_title">Thermal profiles</string>
    <string name="thermal_summary">Per-app thermal and touchscreen profiles with game mode</string>
    <string name="thermal_default">Default</string>
    <string name="thermal_performance">Performance</string>
    <string name="thermal_camera">Camera</string>
    <string name="thermal_dialer">Dialer</string>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.\n\nWARNING: Ensure that any headphones are unplugged.</string>

    <!-- Kcal settings -->
    <string name="kcal_settings_title">KCAL settings</string>
    <string name="kcal_settings_summary">Adjust the colors of your display using KCAL</string>
    <string name="kcal_enable">Use KCAL</string>
    <string name="kcal_not_supported">Display color settings is not supported by the kernel</string>
    <string name="red_slider_title">Red</string>
    <string name="green_slider_title">Green</string>
    <string name="blue_slider_title">Blue</string>
    <string name="hue_slider_title">Hue</string>
    <string name="brightness_slider_title">Brightness</string>
    <string name="kcal_rgb_preference_category_title">RGB</string>
    <string name="kcal_calibration_preference_category_title">Color calibration</string>
    <string name="saturation_slider_title">Saturation</string>
    <string name="reset_default_button_title">Reset to default configuration</string>
    <string name="reset_default_button_summary">Reset all the configurations of this screen</string>
    <string name="contrast_slider_title">Contrast</string>
    <string name="reset_category_title">Reset</string>

    <!-- LCD Features -->
    <string name="lcd_features_title">LCD features</string>
    <string name="lcd_features_summary">High Brightness Mode, CABC</string>
    <string name="lcd_hbm_title">High Brightness Mode (HBM)</string>
    <string name="lcd_hbm_tile_title">HBM</string>
    <string name="lcd_hbm_medium">Medium</string>
    <string name="lcd_hbm_high">High</string>
    <string name="lcd_cabc_title">CABC Mode</string>
    <string name="lcd_cabc_low">Low (UI)</string>
    <string name="lcd_cabc_medium">Medium (Videos)</string>
    <string name="lcd_cabc_high">High (Images)</string>
    <string name="lcd_features_info">High Brightness Mode (HBM) increases the maximum brightness of the display to improve visibility under sunlight. Increases power consumption.\n\nCABC (Content Adaptive Backlight Control) adjusts display and backlight brightness based on currently shown content, to reduce power consumption without degradation.</string>
    
    <!-- Touch Control Settings -->
    <string name="touch_game_mode_title">Enable game mode</string>
    <string name="touch_game_mode_summary">Activate manual touchscreen feature controls and increase CPU and GPU performance</string>
    <string name="touch_response_title">Touch response</string>
    <string name="touch_response_summary">Control touch response</string>
    <string name="touch_sensitivity_title">Touch sensitivity</string>
    <string name="touch_sensitivity_summary">Control touch sensitivity for repeated taps</string>
    <string name="touch_resistant_title">Touch-resistant area</string>
    <string name="touch_resistant_summary">Reduce touch sensitivity near the edges to avoid triggering touch controls</string>

    <!-- Refresh Rate  -->
    <string name="refresh_title">App Refresh Rate</string>
    <string name="refresh_summary">Adjust per-app maximum refresh rate</string>
    <string name="refresh_default">Default</string>
    <string name="refresh_rate_tile_title">Refresh Rate</string>

    <!-- Haptic Level Settings -->
    <string name="haptic_title">Haptic feedback</string>
    <string name="haptic_warning">Setting-up haptic level too high may cause permanent hardware damage, use at your own risk</string>
    <string name="haptic_summary">Customize vibration intensity</string>
    <string name="haptic_level_title">Level</string>
    <string name="haptic_level_summary">Amount of vibration intensity</string>
    <string name="haptic_level_summary_incompatible">Feature not supported</string>
</resources>
